admin message added

--- a/accounts/templates/admin/sidenav.html
+++ b/accounts/templates/admin/sidenav.html
@@ -37,12 +37,12 @@
         <i class="fa fa-fw fa-users"></i>
         <span class="nav-link-text">Public Users</span>
       </a>
-            <!-- <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reviews">
-                <a class="nav-link" href="dashboard-reviews.html">
-            <i class="fa fa-fw fa-star"></i>
-            <span class="nav-link-text">Reviews</span>
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reviews">
+                <a class="nav-link" href="{% url 'message' %}">
+            <i class="fa fa-fw fa-comment-alt"></i>
+            <span class="nav-link-text">Messages</span>
           </a>
-            </li> -->
+            </li>
             <!-- <li class="nav-item">
                 <span class="nav-title-text">Example Pages</span>
             </li>
