--- a/accounts/templates/provider/dashboard.html
+++ b/accounts/templates/provider/dashboard.html
@@ -44,8 +44,8 @@
                 <a class="d-block padding-30px background-amber box-shadow border-radius-10 hvr-float">
                     <h6 class="text-white margin-0px font-weight-400">
                         <i class="far fa-star text-icon-large margin-bottom-10px opacity-5 d-block"></i>
-                        <span class="font-2 text-extra-large">{{review}}</span>
-                        <span class="margin-left-10px">Total Reviews</span>
+                        <span class="font-2 text-extra-large">{{message}}</span>
+                        <span class="margin-left-10px">Unread Admin Message</span>
                     </h6>
                 </a>
             </div>
