--- a/accounts/templates/admin/pager.html
+++ b/accounts/templates/admin/pager.html
@@ -2,7 +2,11 @@
     <div class="padding-30px background-white border-radius-20 box-shadow">
         <h3><i class="far fa-envelope-open margin-right-10px text-main-color"></i> Admin Message </h3>
         <hr>
-        <textarea class="form-control" placeholder="Enter  Admin Message  here" id="exampleTextarea" rows="3"></textarea>
-        <a href="#" class="btn btn-md border-0 border-radius-10 background-main-color padding-lr-20px text-white margin-tb-10px">Sent Now</a>
+        <form method="post" action>
+        {% csrf_token %}
+        {% load widget_tweaks %}
+        {% render_field form.message class="form-control" placeholder="Enter  Admin Message  here" id="exampleTextarea" rows="3" %}
+        <button type="submit" class="btn btn-md border-0 border-radius-10 background-main-color padding-lr-20px text-white margin-tb-10px">Sent Now</button>
+        </form>
     </div>
 </div>
