--- a/accounts/templates/provider/sidenav.html
+++ b/accounts/templates/provider/sidenav.html
@@ -52,13 +52,13 @@
                     <span class="nav-link-text">Bookings</span>
                 </a>
             </li>
-            <!-- <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Add Listing">
-                <a class="nav-link" href="dashboard-add-listing.html">
-                    <i class="fa fa-fw fa-plus-circle"></i>
-                    <span class="nav-link-text">Add Listing</span>
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Add Listing">
+                <a class="nav-link" href="{% url 'my_message' %}">
+                    <i class="fa fa-fw fa-comment-alt"></i>
+                    <span class="nav-link-text">Admin Message</span>
                 </a>
             </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Packages">
+            <!-- <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Packages">
                 <a class="nav-link" href="dashboard-packages.html">
                     <i class="far fa-fw fa-list-alt"></i>
                     <span class="nav-link-text">Packages</span>
