--- a/accounts/templates/admin/public_users.html
+++ b/accounts/templates/admin/public_users.html
@@ -14,12 +14,12 @@
                 <ol class="breadcrumb opacity-5">
                     <li><a href="{% url 'home' %}">Dashboard</a></li>
                     <li><i class="ti ti-arrow-circle-right"></i></li>
-                    <li class="active">Service Partners</li>
+                    <li class="active">Users</li>
                 </ol>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-6">
-                            <h1 class="font-weight-300">Service Partners</h1>
+                            <h1 class="font-weight-300">Users</h1>
                         </div>
                         <div class="col-6">
                             <div class="text-right">
