--- a/accounts/templates/common/header.html
+++ b/accounts/templates/common/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <header>
-    <div id="fixed-header-dark" class="header-output fixed-header">
+    <div id="fixed-header-dark" class="header-output fixed-header" style="background-color: white;">
         <div class="container header-in">
 
             <div class="row">
