--- a/accounts/templates/common/index.html
+++ b/accounts/templates/common/index.html
@@ -4,9 +4,9 @@
 {% include 'common/header.html' %}
 <!-- // Header  -->
 
-<section class="banner padding-tb-200px sm-ptb-80px background-overlay" style="background-image: url('https://nilethemes.com/html/tabib/assets/img/banner_1.jpg');">
+<section class="banner padding-tb-300px sm-ptb-80px background-overlay" style="background-image: url(static/assets/img/home.jpg);">
     <div class="container z-index-2 position-relative">
-        <div class="title">
+        <!--<div class="title">
             <h1 class="text-title-large text-main-color font-weight-300 margin-bottom-15px">Health Directory</h1>
             <h4 class="font-weight-300 text-main-color text-up-small">A better Doctors , Clinics &amp; Labs . We'll help
                 you find it</h4>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 </section>
 
