--- a/accounts/templates/common/main.html
+++ b/accounts/templates/common/main.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 
 <head>
-    <title>Tabib HTML5 Health Directory Template</title>
+    <title></title>
     <meta name="author" content="Nile-Theme">
     <meta name="robots" content="index follow">
     <meta name="googlebot" content="index follow">
